EXTRA_DIST = README INSTALL config.h \
	     cwcarbonheaders.h cwclassicheaders.h cwmikmodheaders.h \
	     mpwmikmodheaders.h libmikmodversion.r \
	     libmikmod.mcp libmikmod-cw5.xml libmikmod-cw6.xml \
	     BuildLibmikmod libmikmod.make libmikmod.exp \
	     FixTypeAndCreators.applescript FixTypeAndCreators.hqx
