# autotools discourages adding directories to EXTRA_DIST,
# but I'm doing it to indclude the XCode project files.
EXTRA_DIST = README INSTALL CMakeLists.txt \
	     Info.plist InfoPlist.strings mikmod_build.h.in \
	     config.h mikmod.h.in mikmod.h mikmod_build.h \
	     Makefile.darwin libmikmod.export ppc_intrinsics.h \
	     libmikmod.xcodeproj
